[package]
authors = ["asurance <784672616@qq.com>"]
edition = "2018"
name = "rust-raytracing"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = {version = "0.4", optional = true}

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
